<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/_24sdp"
    android:paddingVertical="@dimen/_12sdp"
    android:gravity="center"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:minWidth="59dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/check_progress"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="@string/personal_info"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:layout_marginTop="6.25dp"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/green"
                android:layout_marginTop="10dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:minWidth="59dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/uncheck_progress"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="@string/bmi"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:layout_marginTop="6.25dp"/>

            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#D9D9D9"
                android:layout_marginTop="10dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:minWidth="59dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/uncheck_progress"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="@string/lifestyle"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:layout_marginTop="6.25dp"/>

            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#D9D9D9"
                android:layout_marginTop="10dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:minWidth="59dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/uncheck_progress"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="@string/medical_history"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:layout_marginTop="6.25dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>