<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".authentication.profile_creation.personal.Weight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/user_profile_create_progress"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingHorizontal="26dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/bmi"
                        android:textAllCaps="true"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_10sdp" />
                    <include layout="@layout/user_profile_dots"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="How much do you weigh?"
                    android:layout_marginTop="@dimen/_37sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/mulish"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/this_is_used_to_get_accurate_health_status"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_56sdp"
                    android:gravity="top">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.shawnlin.numberpicker.NumberPicker
                            android:id="@+id/weight_picker"
                            android:layout_width="200dp"
                            android:layout_height="350dp"
                            android:layout_centerHorizontal="true"
                            app:np_divider="@color/primary"
                            app:np_dividerColor="@color/primary"
                            app:np_dividerDistance="70dp"
                            app:np_dividerThickness="0.8dp"
                            app:np_max="300"
                            app:np_min="11"
                            app:np_selectedTextColor="@color/black"
                            app:np_selectedTextSize="45sp"
                            app:np_textColor="@color/grey"
                            app:np_textSize="15sp"
                            app:np_value="55"
                            app:np_wheelItemCount="8" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/mulish"
                            android:gravity="end"
                            android:paddingHorizontal="50dp"
                            android:text="Kg"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E4F0FF"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        android:layout_height="@dimen/_60sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_height="match_parent"
            android:paddingHorizontal="13dp">
            <Button
                android:id="@+id/button_back"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:includeFontPadding="false"
                android:text="@string/back"
                android:paddingHorizontal="22dp"
                android:drawableStart="@drawable/ic_back"
                android:drawableTint="@color/black"
                android:elevation="0dp"
                android:fontFamily="@font/mulish_semibold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:background="@color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_small_1"
                android:drawableRight="@drawable/ic_next"
                android:drawableTint="@color/white"
                android:elevation="0dp"
                android:fontFamily="@font/mulish_semibold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:paddingHorizontal="22dp"
                android:text="@string/next" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>