<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".authentication.profile_creation.lifestyle.Alchohol">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/user_profile_create_progress3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="26dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/lifestyle"
                        android:textAllCaps="true"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_10sdp" />
                    <include layout="@layout/user_profile_dots"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="Did you consumed any alcohol in the last 24 hours?"
                    android:layout_marginTop="37.5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/mulish"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/this_is_used_to_get_accurate_health_status"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="26dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_group_alcohol_taken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radio_button_alcohol_yes"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:buttonTint="@color/alcohol_button_tint1"
                        android:background="@drawable/radio_alcohol"
                        android:drawablePadding="8dp"
                        android:text="Yes"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingEnd="32dp"
                        android:drawableEnd="@drawable/alcoho_yes"
                        android:paddingHorizontal="10dp"
                        tools:ignore="RtlSymmetry" />
                    <RadioButton
                        android:id="@+id/radio_button_alcohol_no"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:buttonTint="@color/alcohol_button_tint1"
                        android:background="@drawable/radio_alcohol"
                        android:drawablePadding="8dp"
                        android:text="No"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingEnd="32dp"
                        android:layout_marginTop="10dp"
                        android:drawableEnd="@drawable/alcohol_no"
                        android:paddingHorizontal="10dp"
                        tools:ignore="RtlSymmetry" />
                    />
                </RadioGroup>



            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E4F0FF"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        android:layout_height="@dimen/_60sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_height="match_parent"
            android:paddingHorizontal="13dp">
            <Button
                android:id="@+id/button_back"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:includeFontPadding="false"
                android:text="@string/back"
                android:paddingHorizontal="22dp"
                android:drawableStart="@drawable/ic_back"
                android:drawableTint="@color/black"
                android:elevation="0dp"
                android:fontFamily="@font/mulish_semibold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:background="@color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_small_1"
                android:drawableEnd="@drawable/ic_next"
                android:drawableTint="@color/white"
                android:elevation="0dp"
                android:fontFamily="@font/mulish_semibold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:paddingHorizontal="22dp"
                android:text="@string/next" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>